--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,11 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    <com.tyczj.extendedcalendarview.ExtendedCalendarView
-        android:id="@+id/calendar"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
-
-    </com.tyczj.extendedcalendarview.ExtendedCalendarView>
-
-    </LinearLayout>
-
+        android:text="test"
+        />
 
 </LinearLayout>
