--- a/app/src/main/res/layout/calendarview.xml
+++ b/app/src/main/res/layout/calendarview.xml
@@ -8,10 +8,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"></LinearLayout>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        android:orientation="horizontal">
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
