--- a/app/src/main/res/layout/calendarview.xml
+++ b/app/src/main/res/layout/calendarview.xml
@@ -1,49 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dl_main_drawer_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:openDrawer="start">
 
-    <LinearLayout
+
+    <include
+        layout="@layout/toolbar"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navView"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        >
-
-        <com.tyczj.extendedcalendarview.ExtendedCalendarView
-            android:id="@+id/calendar"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"/>
-
-    </LinearLayout>
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/dl_main_drawer_root"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        tools:openDrawer="start"
-        >
-        <include
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            layout="@layout/app_bar"/>
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/drawer" />
 
-            <android.support.design.widget.NavigationView
-                android:id="@+id/navView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:fitsSystemWindows="true"
-                app:headerLayout="@layout/nav_header_main"
-                app:menu="@menu/drawer" />
-
-
-    </android.support.v4.widget.DrawerLayout>
-
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.DrawerLayout>
