--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -4,12 +4,12 @@
     <item
         android:id="@+id/item1"
         android:icon="@drawable/ic_launcher"
-        android:title="item1" />
+        android:title="가져오기" />
 
     <item
         android:id="@+id/item2"
         android:icon="@drawable/ic_launcher"
-        android:title="item2" />
+        android:title="설정" />
     <item
         android:id="@+id/item3"
         android:icon="@drawable/ic_launcher"
