--- a/app/src/main/res/layout/content_calendarview.xml
+++ b/app/src/main/res/layout/content_calendarview.xml
@@ -1,27 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:showIn="@layout/toolbar"
-    >
-<!--
+    tools:showIn="@layout/toolbar">
+    <!--
 
-        <include layout="@layout/toolbar" />
-    -->
+            <include layout="@layout/toolbar" />
+        -->
 
 
-    <com.tyczj.extendedcalendarview.ExtendedCalendarView
-        android:id="@+id/calendar"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include layout="@layout/gridview_calendar" />
 
 
 </android.support.constraint.ConstraintLayout>
