--- a/app/src/main/res/layout/gridview_calendar.xml
+++ b/app/src/main/res/layout/gridview_calendar.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context="com.example.diraryappproject.Calendar.CalendarView">
 
     <LinearLayout
+        android:id="@+id/ll_calendar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:background="#343434"
-        android:id="@+id/ll_calendar"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/header"
@@ -22,11 +21,11 @@
             android:background="#ffffff"
             android:gravity="center"
             android:orientation="horizontal"
-            android:padding="10dp" >
+            android:padding="10dp">
 
             <FrameLayout
                 android:layout_width="45dp"
-                android:layout_height="45dp" >
+                android:layout_height="45dp">
 
                 <ImageButton
                     android:id="@+id/imgPrevBtn"
@@ -41,7 +40,7 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_weight="1">
 
                 <TextView
                     android:id="@+id/textMonth"
@@ -64,7 +63,7 @@
 
             <FrameLayout
                 android:layout_width="45dp"
-                android:layout_height="45dp" >
+                android:layout_height="45dp">
 
                 <ImageButton
                     android:id="@+id/imgNextBtn"
@@ -80,11 +79,11 @@
             android:id="@+id/tableRow1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="5dp"
             android:background="#ffffff"
             android:paddingLeft="2dp"
+            android:paddingTop="6dp"
             android:paddingRight="2dp"
-            android:paddingTop="6dp" >
+            android:paddingBottom="5dp">
 
             <TextView
                 android:id="@+id/TextView06"
@@ -169,7 +168,7 @@
             android:numColumns="7"
             android:padding="2dp"
             android:stretchMode="columnWidth"
-            android:textAlignment="gravity" >
+            android:textAlignment="gravity">
 
         </GridView>
 
