Touch event dialog -> Touch event RecyclerView

--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -29,11 +29,8 @@
 
         <include layout="@layout/gridview_calendar" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+        <include layout="@layout/dialog_inform"/>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
