--- a/app/src/main/res/layout/activity_daycalendar.xml
+++ b/app/src/main/res/layout/activity_daycalendar.xml
@@ -7,6 +7,8 @@
     
     <EditText
         android:id="@+id/calendarText"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="일정"/>
