--- a/app/src/main/res/layout/gridview_calendar.xml
+++ b/app/src/main/res/layout/gridview_calendar.xml
@@ -1,57 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--tools:context="com.example.diraryappproject.Calendar.CalendarView">-->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_calendar"
+    tools:context="com.example.diraryappproject.Calendar.CalendarView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="com.example.diraryappproject.Calendar.CalendarView">
+    android:layout_margin="4dp"
+    android:background="#343434"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/ll_calendar"
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:background="#343434"
-        android:orientation="vertical">
+        android:background="#ffffff"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="10dp">
 
-        <LinearLayout
-            android:id="@+id/header"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffffff"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="10dp">
+        <FrameLayout
+            android:layout_width="45dp"
+            android:layout_height="45dp">
 
-            <FrameLayout
-                android:layout_width="45dp"
-                android:layout_height="45dp">
-
-                <ImageButton
-                    android:id="@+id/imgPrevBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/left_arrow" />
-
-            </FrameLayout>
-
-            <RelativeLayout
+            <ImageButton
+                android:id="@+id/imgPrevBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_gravity="center"
+                android:layout_margin="2dp"
+                android:background="@drawable/left_arrow" />
 
-                <TextView
-                    android:id="@+id/textMonth"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:text="January"
-                    android:textColor="#4b4a4a"
-                    android:textSize="20dip"
-                    android:textStyle="bold" />
-                <!--<TextView
+        </FrameLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/textMonth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="January"
+                android:textColor="#4b4a4a"
+                android:textSize="20dip"
+                android:textStyle="bold" />
+            <!--<TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/textMonth"
@@ -59,119 +55,119 @@
                     android:textColor="#4b4a4a"
                     android:textSize="12dp"
                     android:textStyle="normal" />-->
-            </RelativeLayout>
+        </RelativeLayout>
 
-            <FrameLayout
-                android:layout_width="45dp"
-                android:layout_height="45dp">
+        <FrameLayout
+            android:layout_width="45dp"
+            android:layout_height="45dp">
 
-                <ImageButton
-                    android:id="@+id/imgNextBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/righ_arrow" />
-
-            </FrameLayout>
-        </LinearLayout>
-
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffffff"
-            android:paddingLeft="2dp"
-            android:paddingTop="6dp"
-            android:paddingRight="2dp"
-            android:paddingBottom="5dp">
-
-            <TextView
-                android:id="@+id/TextView06"
+            <ImageButton
+                android:id="@+id/imgNextBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="일"
-                android:textColor="#4b4a4a" />
+                android:layout_margin="2dp"
+                android:background="@drawable/righ_arrow" />
 
-            <TextView
-                android:id="@+id/TextView05"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="월"
-                android:textColor="#4b4a4a" />
-
-            <TextView
-                android:id="@+id/TextView04"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="화"
-                android:textColor="#4b4a4a" />
-
-            <TextView
-                android:id="@+id/TextView03"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="수"
-                android:textColor="#4b4a4a" />
-
-            <TextView
-                android:id="@+id/TextView02"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="목"
-                android:textColor="#4b4a4a" />
-
-            <TextView
-                android:id="@+id/TextView01"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="금"
-                android:textColor="#4b4a4a" />
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="토"
-                android:textColor="#4b4a4a" />
-
-        </TableRow>
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#dfdfdf"
-            android:padding="1dp" />
-
-        <GridView
-            android:id="@+id/gridCalendar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffffff"
-            android:cacheColorHint="#ffffff"
-            android:gravity="center"
-            android:listSelector="@android:color/transparent"
-            android:numColumns="7"
-            android:padding="2dp"
-            android:stretchMode="columnWidth"
-            android:textAlignment="gravity">
-
-        </GridView>
-
+        </FrameLayout>
     </LinearLayout>
 
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:paddingLeft="2dp"
+        android:paddingTop="6dp"
+        android:paddingRight="2dp"
+        android:paddingBottom="5dp">
+
+        <TextView
+            android:id="@+id/TextView06"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="일"
+            android:textColor="#4b4a4a" />
+
+        <TextView
+            android:id="@+id/TextView05"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="월"
+            android:textColor="#4b4a4a" />
+
+        <TextView
+            android:id="@+id/TextView04"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="화"
+            android:textColor="#4b4a4a" />
+
+        <TextView
+            android:id="@+id/TextView03"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="수"
+            android:textColor="#4b4a4a" />
+
+        <TextView
+            android:id="@+id/TextView02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="목"
+            android:textColor="#4b4a4a" />
+
+        <TextView
+            android:id="@+id/TextView01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="금"
+            android:textColor="#4b4a4a" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="토"
+            android:textColor="#4b4a4a" />
+
+    </TableRow>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#dfdfdf"
+        android:padding="1dp" />
+
+    <GridView
+        android:id="@+id/gridCalendar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:cacheColorHint="#ffffff"
+        android:gravity="center"
+        android:listSelector="@android:color/transparent"
+        android:numColumns="7"
+        android:padding="2dp"
+        android:stretchMode="columnWidth"
+        android:textAlignment="gravity">
+
+    </GridView>
+
 </LinearLayout>
+
+    <!--</LinearLayout>-->
