--- a/app/src/main/res/layout/activity_daycalendar.xml
+++ b/app/src/main/res/layout/activity_daycalendar.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/calendarText"
+            android:id="@+id/editDay"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -22,18 +22,23 @@
             android:hint="일정" />
 
         <ImageButton
+            android:id="@+id/imgPalttBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:src="@drawable/icons8_paint_palette" />
+            android:src="@drawable/icons8_paint_palette1"
+            android:background="#FFFFFF"/>
 
 
     </LinearLayout>
+
+    <View style="@style/Divider"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         android:gravity="center">
 
@@ -47,6 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
+    <View style="@style/Divider"/>
 
     <EditText
         android:id="@+id/editLocation"
@@ -80,6 +87,25 @@
         android:layout_marginRight="20dp"
         android:hint="설명"
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="100dp"
+        android:gravity="center">
+        <Button
+            android:id="@+id/submitbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="등록"/>
+
+        <Button
+            android:id="@+id/cancelbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="취소"/>
+    </LinearLayout>
 
 
 </LinearLayout>
