--- a/app/src/main/res/layout/activity_daycalendar.xml
+++ b/app/src/main/res/layout/activity_daycalendar.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/editDay"
+            android:id="@+id/editTitle"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
