--- a/app/src/main/res/layout/activity_daycalendar.xml
+++ b/app/src/main/res/layout/activity_daycalendar.xml
@@ -3,27 +3,25 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="#B0C4DE"
     android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:text="일정"
+        android:textSize="20dp" />
 
         <EditText
             android:id="@+id/editTitle"
-            android:layout_width="280dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="60dp"
             android:layout_marginBottom="10dp"
-            android:backgroundTint="#FFFFFF"
             android:hint="일정" />
-
-
-    </LinearLayout>
 
     <View style="@style/Divider"/>
 
@@ -43,6 +41,7 @@
             style="?android:attr/borderlessButtonStyle"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:hint="날짜 선택"
             android:textSize="20dp"/>
 
     </LinearLayout>
@@ -93,7 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:src="@drawable/icons8_paint_palette1"
-            android:background="#FFFFFF"/>
+            android:background="#B0C4DE"/>
 
         <TextView
             android:id="@+id/textColor"
@@ -114,12 +113,18 @@
             android:id="@+id/submitbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:background="#6495ED"
+            android:textColor="#FFFFFF"
             android:text="등록"/>
 
         <Button
             android:id="@+id/cancelbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="#6495ED"
+            android:textColor="#FFFFFF"
             android:text="취소"/>
     </LinearLayout>
 
