--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -1,101 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:paddingLeft="10dp"
-        android:text="event on "
-        android:textColor="#696969"
-        android:textSize="16dp" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_name"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:paddingLeft="10dp"
-        android:text="event on "
-        android:textColor="#696969"
-        android:textSize="16dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
 
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="70dp"
+                android:paddingLeft="10dp"
+                android:text="event on "
+                android:textColor="#696969"
+                android:textSize="16dp" />
 
-    <TextView
-        android:id="@+id/tv_desc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_type"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:paddingLeft="10dp"
-        android:text="event on "
-        android:textColor="#696969"
-        android:textSize="16dp"
-        android:visibility="gone" />
+            <TextView
+                android:id="@+id/tv_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_name"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="70dp"
+                android:paddingLeft="10dp"
+                android:text="event on "
+                android:textColor="#696969"
+                android:textSize="16dp" />
 
-    <TextView
-        android:id="@+id/tv_class"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_desc"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:paddingLeft="10dp"
-        android:text="event on "
-        android:textColor="#696969"
-        android:textSize="16dp" />
 
-    <TextView
-        android:id="@+id/tv_location"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_desc"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="10dp"
-        android:paddingLeft="10dp"
-        android:text="event on "
-        android:textColor="#696969"
-        android:textSize="16dp" />
+            <TextView
+                android:id="@+id/tv_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_type"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="70dp"
+                android:paddingLeft="10dp"
+                android:text="event on "
+                android:textColor="#696969"
+                android:textSize="16dp"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/tv_class"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_desc"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="70dp"
+                android:paddingLeft="10dp"
+                android:text="event on "
+                android:textColor="#696969"
+                android:textSize="16dp" />
+
+            <TextView
+                android:id="@+id/tv_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_desc"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="70dp"
+                android:paddingLeft="10dp"
+                android:text="event on "
+                android:textColor="#696969"
+                android:textSize="16dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:src="@drawable/icons8_cancel" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 
     <!--<TextView-->
-        <!--android:id="@+id/tv_section"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_below="@+id/tv_class"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--android:layout_marginRight="10dp"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:text="event on "-->
-        <!--android:textColor="#696969"-->
-        <!--android:textSize="16dp"-->
-        <!--android:visibility="gone" />-->
+    <!--android:id="@+id/tv_section"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@+id/tv_class"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_marginLeft="10dp"-->
+    <!--android:layout_marginTop="5dp"-->
+    <!--android:layout_marginRight="10dp"-->
+    <!--android:paddingLeft="10dp"-->
+    <!--android:text="event on "-->
+    <!--android:textColor="#696969"-->
+    <!--android:textSize="16dp"-->
+    <!--android:visibility="gone" />-->
 
     <View
         android:id="@+id/visdf"
         android:layout_width="match_parent"
         android:layout_height="1.5dp"
-        android:layout_below="@+id/tv_location"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
@@ -123,4 +148,4 @@
         android:visibility="gone" />
 
 
-</RelativeLayout>
+</LinearLayout>
